--- a/Practico/TP_Evaluables/Trabajo_Practico_N6/Delivery_Loquesea/app/src/main/res/layout/activity_descripcion_pedido.xml
+++ b/Practico/TP_Evaluables/Trabajo_Practico_N6/Delivery_Loquesea/app/src/main/res/layout/activity_descripcion_pedido.xml
@@ -48,8 +48,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:divider="@drawable/divisor_vertical"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:showDividers="middle">
 
             <TextView
                 android:id="@+id/textView6"
@@ -71,10 +73,17 @@
                     android:ems="10"
                     android:gravity="start|top"
                     android:inputType="textMultiLine"
-                    android:maxLength="400"
+                    android:maxLength="401"
                     android:maxLines="8"
                     android:minHeight="50dp" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Máximo 400 caracteres"
+                android:textSize="11sp">
+            </TextView>
 
             <TextView
                 android:id="@+id/textView7"
