--- a/Practico/TP_Evaluables/Trabajo_Practico_N6/Delivery_Loquesea/app/src/main/res/layout/activity_domicilio_entrega.xml
+++ b/Practico/TP_Evaluables/Trabajo_Practico_N6/Delivery_Loquesea/app/src/main/res/layout/activity_domicilio_entrega.xml
@@ -173,7 +173,7 @@
                                 android:layout_marginTop="8dp"
                                 android:layout_marginBottom="8dp"
                                 android:ems="10"
-                                android:inputType="numberSigned|number"
+                                android:inputType="textPersonName"
                                 android:maxWidth="60dp"
                                 android:maxLength="3"
                                 android:minWidth="100dp"
@@ -267,16 +267,21 @@
                                 android:ems="10"
                                 android:gravity="start|top"
                                 android:inputType="textMultiLine"
-                                android:maxLength="400"
+                                android:maxLength="401"
                                 android:maxLines="6"
                                 android:minHeight="50dp" />
                         </com.google.android.material.textfield.TextInputLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Máximo 400 caracteres"
+                            android:textSize="11sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/tilReferenciaEnvio">
+
+                        </TextView>
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginVertical="5dp" />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
