--- a/Practico/TP_Evaluables/Trabajo_Practico_N6/Delivery_Loquesea/app/src/main/res/layout/activity_domicilio_entrega.xml
+++ b/Practico/TP_Evaluables/Trabajo_Practico_N6/Delivery_Loquesea/app/src/main/res/layout/activity_domicilio_entrega.xml
@@ -211,7 +211,7 @@
                                 android:layout_marginBottom="8dp"
                                 android:layout_weight="1"
                                 android:ems="10"
-                                android:inputType="number|textCapSentences|textCapWords"
+                                android:inputType="textPersonName|textCapWords"
                                 android:maxWidth="60dp"
                                 android:maxLength="3"
                                 android:minWidth="100dp"
